--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-My GitHub Page
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>GNOME Video Arcade</title>
+    <link rel="stylesheet" type="text/css" href="css/site.css"/>
+  </head>
+  <body>
+    <div id="header">
+      <img src="images/joystick.png"/>
+      <h1>GNOME Video Arcade</h1>
+      <h2>Play classic arcade games on your desktop!</h2>
+    </div>
+
+    <div id="bottom">
+      <div id="bottomLeft">
+        <p><strong>GNOME Video Arcade</strong> is a simple
+        <a href="http://mamedev.org/">MAME</a> frontend for the
+        <a href="http://www.gnome.org/">GNOME</a> desktop.</p>
+
+        <p>It supports both the <a href="http://x.mame.net/">xmame</a> and
+        <a href="http://rbelmont.mameworld.info/?page_id=163">sdlmame</a>
+        ports of MAME for GNU/Linux and other UNIX-like operating systems,
+        and can utilize third-party data files like
+        <a href="http://www.arcade-history.com/">arcade history</a> and
+        <a href="http://www.progettoemma.net/?catlist">game categories</a>.
+      </div>
+
+      <div id="bottomRight">
+        <div class="download">
+          <img class="download" src="images/package.png"/>
+          <p><strong>Latest Release</strong></p>
+          <p><a href="http://sourceforge.net/project/platformdownload.php?group_id=196740">GNOME Video Arcade 0.6.5</a><br>
+          <small>Released November 21, 2008</small></p>
+        </div>
+      </div>
+    </div>
+
+    <div id="bottom">
+      <div id="bottomLeft">
+        <h3>Features</h3>
+        <ul>
+          <li>Focused on usability rather than customization.
+          <li>Tag your favorite games to easily find them again later.
+          <li>Read historical information and tips about your favorite games.
+          <li>Game recording and play back.
+          <li>Interactive search.
+        </ul>
+
+        <h3>Screenshots</h3>
+        <img class="screenshot" alt="Main Window"
+          src="images/screenshot-main.png">
+      </div>
+
+      <div id="bottomRight">
+        <h3>News</h3>
+
+        <p class="date">February 22, 2009</p>
+        <p class="news">Transitioning from
+        <a href="http://sourceforge.net/projects/gva">SourceForge</a>.
+        Stay tuned for more updates.</p>
+
+      </div>
+
+    </div>
+  </body>
+</html>
