Add a border to the site.

--- a/index.html
+++ b/index.html
@@ -8,62 +8,71 @@
     <link rel="stylesheet" type="text/css" href="css/site.css"/>
   </head>
   <body>
-    <div id="header">
-      <img src="images/joystick.png"/>
-      <h1>GNOME Video Arcade</h1>
-      <h2>Play classic arcade games on your desktop!</h2>
-    </div>
-
-    <div id="bottom">
-      <div id="bottomLeft">
-        <p><strong>GNOME Video Arcade</strong> is a simple
-        <a href="http://mamedev.org/">MAME</a> frontend for the
-        <a href="http://www.gnome.org/">GNOME</a> desktop.</p>
-
-        <p>It supports both the <a href="http://x.mame.net/">xmame</a> and
-        <a href="http://rbelmont.mameworld.info/?page_id=163">sdlmame</a>
-        ports of MAME for GNU/Linux and other UNIX-like operating systems,
-        and can utilize third-party data files like
-        <a href="http://www.arcade-history.com/">arcade history</a> and
-        <a href="http://www.progettoemma.net/?catlist">game categories</a>.
+    <div class="content">
+      <div id="header">
+        <img src="images/joystick.png"/>
+        <h1>GNOME Video Arcade</h1>
+        <h2>Play classic arcade games on your desktop!</h2>
       </div>
 
-      <div id="bottomRight">
-        <div class="download">
-          <img class="download" src="images/package.png"/>
-          <p><strong>Latest Release</strong></p>
-          <p><a href="http://sourceforge.net/project/platformdownload.php?group_id=196740">GNOME Video Arcade 0.6.5</a><br>
-          <small>Released November 21, 2008</small></p>
+      <div id="bottom">
+        <div id="bottomLeft">
+          <p><strong>GNOME Video Arcade</strong> is a simple
+          <a href="http://mamedev.org/">MAME</a> frontend for the
+          <a href="http://www.gnome.org/">GNOME</a> desktop.</p>
+
+          <p>It supports both the <a href="http://x.mame.net/">xmame</a> and
+          <a href="http://rbelmont.mameworld.info/?page_id=163">sdlmame</a>
+          ports of MAME for GNU/Linux and other UNIX-like operating systems,
+          and can utilize third-party data files like
+          <a href="http://www.arcade-history.com/">arcade history</a> and
+          <a href="http://www.progettoemma.net/?catlist">game categories</a>.
+          </p>
+
+          <p>GNOME Video Arcade was written by
+          <a href="http://mbarnes.fedorapeople.org">Matthew Barnes</a>
+          and is released under terms of the
+          <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">GNU
+          General Public License</a>.</p>
+        </div>
+
+        <div id="bottomRight">
+          <div class="download">
+            <img class="download" src="images/package.png"/>
+            <p><strong>Latest Release</strong></p>
+            <p><a href="http://sourceforge.net/project/platformdownload.php?group_id=196740">GNOME Video Arcade 0.6.5</a><br>
+            <small>Released November 21, 2008</small></p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div id="bottom">
-      <div id="bottomLeft">
-        <h3>Features</h3>
-        <ul>
-          <li>Focused on usability rather than customization.
-          <li>Tag your favorite games to easily find them again later.
-          <li>Read historical information and tips about your favorite games.
-          <li>Game recording and play back.
-          <li>Interactive search.
-        </ul>
+      <div id="bottom">
+        <div id="bottomLeft">
+          <h3>Features</h3>
+          <ul>
+            <li>Focused on usability rather than customization.
+            <li>Tag your favorite games to easily find them again later.
+            <li>Read historical information and tips about your favorite games.
+            <li>Game recording and play back.
+            <li>Interactive search.
+          </ul>
 
-        <h3>Screenshots</h3>
-        <img class="screenshot" alt="Main Window"
-          src="images/screenshot-main.png">
+          <h3>Screenshots</h3>
+          <img class="screenshot" alt="Main Window"
+            src="images/screenshot-main.png">
+        </div>
+
+        <div id="bottomRight">
+          <h3>News</h3>
+
+          <p class="date">February 22, 2009</p>
+          <p class="news">Transitioning from
+          <a href="http://sourceforge.net/projects/gva">SourceForge</a>.
+          Stay tuned for more updates.</p>
+
+        </div>
+
       </div>
-
-      <div id="bottomRight">
-        <h3>News</h3>
-
-        <p class="date">February 22, 2009</p>
-        <p class="news">Transitioning from
-        <a href="http://sourceforge.net/projects/gva">SourceForge</a>.
-        Stay tuned for more updates.</p>
-
-      </div>
-
     </div>
   </body>
 </html>
