Add a snarky mission statement.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
           <a href="http://www.progettoemma.net/?catlist">game categories</a>.
           </p>
 
+          <p>GNOME Video Arcade recognizes that the front-end is not the
+          point; the <i>games</i> are. As such, its chief design goal is
+          to help you quickly find a game to play and then get out of the
+          way. Its purpose is not to help you manage your ROM collection,
+          nor to provide a confusing graphical interface for MAME's
+          <a href="http://gxmame.sourceforge.net/screenshots/newlayout.png">plethora
+          of configuration options</a>.</p>
+
           <p>GNOME Video Arcade was written by
           <a href="http://mbarnes.fedorapeople.org">Matthew Barnes</a>
           and is released under terms of the
