GitHub generates tarballs on the fly.  How cool is that!?

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="download">
             <img class="download" src="images/package.png"/>
             <p><strong>Latest Release</strong></p>
-            <p><a href="http://sourceforge.net/project/platformdownload.php?group_id=196740">GNOME Video Arcade 0.6.5</a><br>
+            <p><a href="http://github.com/mbarnes/gnome-video-arcade/tarball/0.6.5">GNOME Video Arcade 0.6.5</a><br>
             <small>Released November 21, 2008</small></p>
           </div>
         </div>
