Add more screenshots.  With captions!

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="download">
             <img class="download" src="images/package.png"/>
             <p><strong>Latest Release</strong></p>
-            <p><a href="http://github.com/mbarnes/gnome-video-arcade/tarball/0.6.5">GNOME Video Arcade 0.6.5</a><br>
+            <p><a href="http://github.com/mbarnes/gnome-video-arcade/tarball/0.6.5">GNOME Video Arcade 0.6.5</a><br/>
             <small>Released November 21, 2008</small></p>
           </div>
         </div>
@@ -66,8 +66,24 @@
           </ul>
 
           <h3>Screenshots</h3>
-          <img class="screenshot" alt="Main Window"
-            src="images/screenshot-main.png">
+          <div class="screenshot">
+            <a href="images/screenshot-main.png">
+            <img class="screenshot" alt="Main Window"
+              src="images/screenshot-main.thumb.png"></a>
+            <br/>Main Window
+          </div>
+          <div class="screenshot">
+            <a href="images/screenshot-properties.png">
+            <img class="screenshot" alt="Game Properties"
+              src="images/screenshot-properties.thumb.png"></a>
+            <br/>Game Properties
+          </div>
+          <div class="screenshot">
+            <a href="images/screenshot-preferences.png">
+            <img class="screenshot" alt="Preferences"
+              src="images/screenshot-preferences.thumb.png"></a>
+            <br/>Preferences
+          </div>
         </div>
 
         <div id="bottomRight">
