--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="http://www.progettoemma.net/?catlist">game categories</a>.
           </p>
 
-          <p>GNOME Video Arcade recognizes that the front-end is not the
+          <p>GNOME Video Arcade recognizes that the frontend is not the
           point; the <i>games</i> are. As such, its chief design goal is
           to help you quickly find a game to play and then get out of the
           way. Its purpose is not to help you manage your ROM collection,
