--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <p>GNOME Video Arcade recognizes that the frontend is not the
           point; the <i>games</i> are. As such, its chief design goal is
           to help you quickly find a game to play and then get out of the
-          way. Its purpose is not to help you manage your ROM collection,
-          nor to provide a confusing graphical interface for MAME's
+          way. Its purpose is <i>not</i> to help you manage your ROM
+          collection, nor to provide a confusing graphical interface for MAME's
           <a href="http://gxmame.sourceforge.net/screenshots/newlayout.png">plethora
           of configuration options</a>.</p>
 
