--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
           <div class="download">
             <img class="download" src="images/package.png"/>
             <p><strong>Latest Release</strong></p>
-            <p><a href="http://github.com/mbarnes/gnome-video-arcade/tarball/0.6.5">GNOME Video Arcade 0.6.5</a><br/>
-            <small>Released November 21, 2008</small></p>
+            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.tar.bz2">GNOME Video Arcade 0.6.6</a></br>
+            <small>Released April 5, 2009</small></p>
+            <p>
+              <small>[<a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.news">News</a>]</small>
+              <small>[<a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.changes">Changes</a>]</small>
+              <small>[<a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>]</small>
+            </p>
           </div>
         </div>
       </div>
@@ -88,6 +93,14 @@
 
         <div id="bottomRight">
           <h3>News</h3>
+
+          <p class="date">April 5, 2009</p>
+          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.tar.bz2">
+          GNOME Video Arcade 0.6.6</a> released.  Special thanks to
+          Pierre Riteau for his OpenBSD compatibility patch.</p>
+          <p class="news">Official tarballs are now hosted at
+          <a href="http://download.gnome.org/sources/gnome-video-arcade/">
+          download.gnome.org</a>.</p>
 
           <p class="date">February 22, 2009</p>
           <p class="news">Transitioning from
