Separate links with vertical bars.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <p><strong>Latest Release</strong></p>
             <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.tar.bz2">GNOME Video Arcade 0.6.6</a></br>
             <small>Released April 5, 2009</small></p>
-            <p>
-              <small>[<a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.news">News</a>]</small>
-              <small>[<a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.changes">Changes</a>]</small>
-              <small>[<a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>]</small>
-            </p>
+            <p><small>
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.news">News</a> |
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.changes">Changes</a> |
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>
+            </small></p>
           </div>
         </div>
       </div>
