--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
           <div class="download">
             <img class="download" src="images/package.png"/>
             <p><strong>Latest Release</strong></p>
-            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.tar.bz2">GNOME Video Arcade 0.6.6</a></br>
-            <small>Released April 5, 2009</small></p>
+            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.tar.bz2">GNOME Video Arcade 0.6.7</a></br>
+            <small>Released April 26, 2009</small></p>
             <p><small>
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.news">News</a> |
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.changes">Changes</a> |
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.news">News</a> |
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.changes">Changes</a> |
               <a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>
             </small></p>
           </div>
@@ -93,6 +93,10 @@
 
         <div id="bottomRight">
           <h3>News</h3>
+
+          <p class="date">April 26, 2009</p>
+          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.tar.bz2">
+          GNOME Video Arcade 0.6.7</a> released.</p>
 
           <p class="date">April 5, 2009</p>
           <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.tar.bz2">
