--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
           <div class="download">
             <img class="download" src="images/package.png"/>
             <p><strong>Latest Release</strong></p>
-            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.tar.bz2">GNOME Video Arcade 0.6.7</a></br>
-            <small>Released April 26, 2009</small></p>
+            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.tar.bz2">GNOME Video Arcade 0.6.8</a></br>
+            <small>Released January 23, 2010</small></p>
             <p><small>
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.news">News</a> |
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.changes">Changes</a> |
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.news">News</a> |
               <a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>
             </small></p>
           </div>
@@ -93,6 +92,16 @@
 
         <div id="bottomRight">
           <h3>News</h3>
+
+          <p class="date">January 23, 2010</p>
+          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.tar.bz2">
+          GNOME Video Arcade 0.6.8</a> released. Yes, the project is
+          still alive.  Sorry about the long interval between releases.
+          My <a href="http://projects.gnome.org/evolution/">day job</a>
+          keeps me busy.</p>
+          <p class="news">This release is mostly translation updates
+          and me dusting things off. See <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.news">News</a>
+          for details. More interesting enhancements to follow...</p>
 
           <p class="date">April 26, 2009</p>
           <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.tar.bz2">
