Add Get Involved and Development sections to the website.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,23 @@
               src="images/screenshot-preferences.thumb.png"></a>
             <br/>Preferences
           </div>
+
+          <h3>Get Involved</h3>
+          <p>Help improve GNOME Video Arcade:</p>
+          <p>If it crashes on you or doesn't work, please tell me.</p>
+          <p>If something about it annoys you, please tell me.</p>
+          <p>Got a suggestion or cool idea? <i>Please tell me!</i></p>
+          <p>The best ways to contact me are
+          <a href="mailto:mbarnes@redhat.com?subject=GNOME%20Video%20Arcade">direct email</a> or
+          <a href="https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-video-arcade">
+          opening a Bugzilla ticket</a>.</p>
+
+          <h3>Development</h3>
+          <ul>
+            <li><a href="https://bugzilla.gnome.org/browse.cgi?product=gnome-video-arcade">Opened Bugzilla tickets</a>
+            <li><a href="http://git.gnome.org/browse/gnome-video-arcade">GIT source code repository</a>
+            <li><a href="http://l10n.gnome.org/module/gnome-video-arcade/">Translation statistics</a>
+            <li><a href="http://git.gnome.org/browse/gnome-video-arcade/plain/TODO">To-do list</a>
         </div>
 
         <div id="bottomRight">
