--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           <div class="download">
             <img class="download" src="images/package.png"/>
             <p><strong>Latest Release</strong></p>
-            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.tar.bz2">GNOME Video Arcade 0.6.8</a></br>
-            <small>Released January 23, 2010</small></p>
+            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.0.tar.bz2">GNOME Video Arcade 0.7.0</a></br>
+            <small>Released March 11, 2010</small></p>
             <p><small>
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.news">News</a> |
+              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.0.news">News</a> |
               <a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>
             </small></p>
           </div>
@@ -109,6 +109,13 @@
 
         <div id="bottomRight">
           <h3>News</h3>
+
+          <p class="date">March 11, 2010</p>
+          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.0.tar.bz2">
+          GNOME Video Arcade 0.7.0</a> released. This release features
+          in-game music previews for certain games. Open the Properties
+          window to listen! Music is streamed from
+          <a href="http://www.arcade-history.com/">arcade-history.com</a>.
 
           <p class="date">January 23, 2010</p>
           <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.tar.bz2">
