Redirect to live.gnome.org.

--- a/index.html
+++ b/index.html
@@ -5,163 +5,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>GNOME Video Arcade</title>
-    <link rel="stylesheet" type="text/css" href="css/site.css"/>
   </head>
   <body>
-    <div class="content">
-      <div id="header">
-        <img src="images/joystick.png"/>
-        <h1>GNOME Video Arcade</h1>
-        <h2>Play classic arcade games on your desktop!</h2>
-      </div>
-
-      <div id="bottom">
-        <div id="bottomLeft">
-          <p><strong>GNOME Video Arcade</strong> is a simple
-          <a href="http://mamedev.org/">MAME</a> frontend for the
-          <a href="http://www.gnome.org/">GNOME</a> desktop.</p>
-
-          <p>It supports both the <a href="http://x.mame.net/">xmame</a> and
-          <a href="http://rbelmont.mameworld.info/?page_id=163">sdlmame</a>
-          ports of MAME for GNU/Linux and other UNIX-like operating systems,
-          and can utilize third-party data files like
-          <a href="http://www.arcade-history.com/">arcade history</a> and
-          <a href="http://www.progettoemma.net/?catlist">game categories</a>.
-          </p>
-
-          <p>GNOME Video Arcade recognizes that the frontend is not the
-          point; the <i>games</i> are. As such, its chief design goal is
-          to help you quickly find a game to play and then get out of the
-          way. Its purpose is <i>not</i> to help you manage your ROM
-          collection, nor to provide a confusing graphical interface for MAME's
-          <a href="http://gxmame.sourceforge.net/screenshots/newlayout.png">plethora
-          of configuration options</a>.</p>
-
-          <p>GNOME Video Arcade was written by
-          <a href="http://mbarnes.fedorapeople.org">Matthew Barnes</a>
-          and is released under terms of the
-          <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">GNU
-          General Public License</a>.</p>
-        </div>
-
-        <div id="bottomRight">
-          <div class="download">
-            <img class="download" src="images/package.png"/>
-            <p><strong>Latest Release</strong></p>
-            <p><a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.1.tar.bz2">GNOME Video Arcade 0.7.1</a></br>
-            <small>Released May 31, 2010</small></p>
-            <p><small>
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.1.news">News</a> |
-              <a href="http://download.gnome.org/sources/gnome-video-arcade/">Older Releases</a>
-            </small></p>
-          </div>
-        </div>
-      </div>
-
-      <div id="bottom">
-        <div id="bottomLeft">
-          <h3>Features</h3>
-          <ul>
-            <li>Focused on usability rather than customization.
-            <li>Tag your favorite games to easily find them again later.
-            <li>Read historical information and tips about your favorite games.
-            <li>Game recording and play back.
-            <li>Interactive search.
-          </ul>
-
-          <h3>Screenshots</h3>
-          <div class="screenshot">
-            <a href="images/screenshot-main.png">
-            <img class="screenshot" alt="Main Window"
-              src="images/screenshot-main.thumb.png"></a>
-            <br/>Main Window
-          </div>
-          <div class="screenshot">
-            <a href="images/screenshot-properties.png">
-            <img class="screenshot" alt="Game Properties"
-              src="images/screenshot-properties.thumb.png"></a>
-            <br/>Game Properties
-          </div>
-          <div class="screenshot">
-            <a href="images/screenshot-preferences.png">
-            <img class="screenshot" alt="Preferences"
-              src="images/screenshot-preferences.thumb.png"></a>
-            <br/>Preferences
-          </div>
-
-          <h3>Get Involved</h3>
-          <p>Help improve GNOME Video Arcade:</p>
-          <p>If it crashes on you or doesn't work, please tell me.</p>
-          <p>If something about it annoys you, please tell me.</p>
-          <p>Got a suggestion or cool idea? <i>Please tell me!</i></p>
-          <p>The best ways to contact me are
-          <a href="mailto:mbarnes@redhat.com?subject=GNOME%20Video%20Arcade">direct email</a> or
-          <a href="https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-video-arcade">
-          opening a Bugzilla ticket</a>.</p>
-
-          <h3>Development</h3>
-          <ul>
-            <li><a href="https://bugzilla.gnome.org/browse.cgi?product=gnome-video-arcade">Opened Bugzilla tickets</a>
-            <li><a href="http://git.gnome.org/browse/gnome-video-arcade">GIT source code repository</a>
-            <li><a href="http://l10n.gnome.org/module/gnome-video-arcade/">Translation statistics</a>
-            <li><a href="http://git.gnome.org/browse/gnome-video-arcade/plain/TODO">To-do list</a>
-        </div>
-
-        <div id="bottomRight">
-          <h3>News</h3>
-
-          <p class="date">May 31, 2010</p>
-          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.1.tar.bz2">
-          GNOME Video Arcade 0.7.1</a> released.</p>
-
-          <p class="date">March 11, 2010</p>
-          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.7/gnome-video-arcade-0.7.0.tar.bz2">
-          GNOME Video Arcade 0.7.0</a> released. This release features
-          in-game music previews for certain games. Open the Properties
-          window to listen! Music is streamed from
-          <a href="http://www.arcade-history.com/">arcade-history.com</a>.</p>
-
-          <p class="date">January 23, 2010</p>
-          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.tar.bz2">
-          GNOME Video Arcade 0.6.8</a> released. Yes, the project is
-          still alive.  Sorry about the long interval between releases.
-          My <a href="http://projects.gnome.org/evolution/">day job</a>
-          keeps me busy.</p>
-          <p class="news">This release is mostly translation updates
-          and me dusting things off. See <a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.8.news">News</a>
-          for details. More interesting enhancements to follow...</p>
-
-          <p class="date">April 26, 2009</p>
-          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.7.tar.bz2">
-          GNOME Video Arcade 0.6.7</a> released.</p>
-
-          <p class="date">April 5, 2009</p>
-          <p class="news"><a href="http://download.gnome.org/sources/gnome-video-arcade/0.6/gnome-video-arcade-0.6.6.tar.bz2">
-          GNOME Video Arcade 0.6.6</a> released.  Special thanks to
-          Pierre Riteau for his OpenBSD compatibility patch.</p>
-          <p class="news">Official tarballs are now hosted at
-          <a href="http://download.gnome.org/sources/gnome-video-arcade/">
-          download.gnome.org</a>.</p>
-
-          <p class="date">February 22, 2009</p>
-          <p class="news">Transitioning from
-          <a href="http://sourceforge.net/projects/gva">SourceForge</a>.
-          Stay tuned for more updates.</p>
-
-        </div>
-
-      </div>
-    </div>
-
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-    try {
-    var pageTracker = _gat._getTracker("UA-7607911-1");
-    pageTracker._trackPageview();
-    } catch(err) {}</script>
+    <h1>
+      This page has moved to
+      <a href="http://live.gnome.org/GnomeVideoArcade">http://live.gnome.org/GnomeVideoArcade</a>
+    </h1>
   </body>
 </html>
